# ProgGPU

./: .gitignore  CMakeLists.txt  ProjetChaleur2DGPU.ipynb  README.md  build.sh  clean.sh  compute_functions.cpp  compute_functions.h  config.conf  cuda_functions.cu  cuda_functions.h  generateCmake.sh  images.c  images.h  main.c  mainCUDA.c  mainOMP.c  openmp_functions.h  run_funtions.c  run_funtions.h  seq_functions.c  seq_functions.h  structures.c  structures.h  utils.c  utils.h
cuda_code/: compute_functions.cu  compute_functions.cuh  cuda_functions.cu  cuda_functions.cuh  cuda_functions.h  images.cu  images.cuh  mainCUDA.cu  useless.c
omp_seq_code/: compute_functions.c  compute_functions.h  images.c  mainOMP.c  openmp_functions.c  run_functions.c  run_functions.h
